[gd_scene load_steps=2 format=1]

[ext_resource path="res://UI/chat/chat.gd" type="Script" id=1]

[node name="chat" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )

[node name="panel" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -90.0
margin/top = -90.0
margin/right = 90.0
margin/bottom = 90.0

[node name="text_edit_nickname" type="TextEdit" parent="panel"]

anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 10.0
margin/right = 10.0
margin/bottom = 35.0
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
caret/block_caret = false
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="chat_display" type="RichTextLabel" parent="panel"]

anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 40.0
margin/right = 10.0
margin/bottom = 140.0
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1

[node name="text_input" type="TextEdit" parent="panel"]

anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 34.0
margin/right = 10.0
margin/bottom = 10.0
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
caret/block_caret = false
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[connection signal="focus_enter" from="panel/text_edit_nickname" to="." method="_on_text_edit_nickname_focus_enter"]

[connection signal="focus_exit" from="panel/text_edit_nickname" to="." method="_on_text_edit_nickname_focus_exit"]

[connection signal="focus_enter" from="panel/text_input" to="." method="_on_text_input_focus_enter"]

[connection signal="focus_exit" from="panel/text_input" to="." method="_on_text_input_focus_exit"]


